road commit one

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,15 +26,17 @@
 
        <ul class="title-area">
 
-           <li class="name"><h1>Albany Dust Free Cleaning</h1></li>
+           <li class="name"><h1 class="logo">Albany Dust Free Cleaning</h1></li>
          </ul>
 
          <section class="top-bar-section">
           
            <ul class="right">
-                 <li class="divider"></li>
+                
 
-                  <li><a href="#">temp</a></li>
+                  <li><a href="#">Quote</a></li>
+                      <li><a href="#">Services</a></li>
+                          <li><a href="#">Contact</a></li>
 
            </ul>
 
@@ -44,6 +46,31 @@
 
 
     <%= yield %>
+
+
+     <!-- Footer -->
+  
+  <footer class="row">
+    <div class="large-12 columns">
+      <hr />
+      <div class="row">
+        <div class="large-6 columns">
+          <p>&copy; Copyright no one at all. Go to town.</p>
+        </div>
+        <div class="large-6 columns">
+          <ul class="inline-list right">
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+            <li><a href="#">Link 5</a></li>
+            <li><a href="#">Link 6</a></li>
+            <li><a href="#">Link 7</a></li>
+          </ul>
+        </div>
+      </div>
+    </div> 
+  </footer>
 
     
     <%= javascript_include_tag "application" %>
