--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="large-12 columns">
   <!-- Main Banner Image - place in a paragraph to enforce the modular scale spacing -->
-      <p><img src="http://placehold.it/1000x400&text=[banner img]" /></p>
+      <p class="banner"><img src="http://placehold.it/1000x400&text=[banner img]" /></p>
     </div>
   </div>
   
@@ -17,18 +17,18 @@
       <h4>This is a content section.</h4>
       <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
       <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-      <p><a href="#" class="secondary small button">Next Page &rarr;</a></p>
+      
     </div>
     
     <div class="large-4 columns">
     
       <!-- Gallery sidebar with a block grid. Note: block grid items should be the same size for optimal results -->
       
-      <ul class="small-block-grid-3">
-        <li><a href="#"><img src="http://placehold.it/120x120" /></a></li>
-        <li><a href="#"><img src="http://placehold.it/120x120" /></a></li>
-       
-      </ul>
+    <div class="panel">
+    	<h4><em>Excellence In Motion</em></h4>
+
+    	<p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+
     </div>
         
   </div>
@@ -39,14 +39,14 @@
     <div class="large-12 columns">
     
       <div class="panel">
-        <h4>Get in touch!</h4>
+        <h4>Get a Quote</h4>
             
         <div class="row">
           <div class="large-9 columns">
-            <p>We'd love to hear from you, you attractive person you.</p>
+            <p>Check out are Service App!</p>
           </div>
           <div class="large-3 columns">
-            <a href="#" class="radius button right">Contact Us</a>
+            <a href="#" class="radius button right">Get a Quote</a>
           </div>
         </div>
       </div>
