--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="large-12 columns">
   <!-- Main Banner Image - place in a paragraph to enforce the modular scale spacing -->
-      <p class="banner"><img src="http://placehold.it/1000x400&text=[banner img]" /></p>
+      <p class="banner"><%=image_tag("banner.png")%></p>
     </div>
   </div>
   
