--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,37 +1,63 @@
   
 <div class="row">
-	<div class="large-12 columns">
-  <!-- Main Banner Image - place in a paragraph to enforce the modular scale spacing -->
-      <p class="banner"><%=image_tag("room-orange 2.png")%></p>
+	<div class="large-12 columns banner">
+ <ul data-orbit>
+  <li>
+    <%=image_tag "test.jpg" %>
+    <div class="orbit-caption">one</div>
+  </li>
+  <li>
+    <%=image_tag "test2.jpg" %>
+    <div class="orbit-caption">two</div>
+  </li>
+  <li>
+   <%=image_tag "test3.jpg" %>
+    <div class="orbit-caption">three</div>
+  </li>
+</ul>
     </div>
   </div>
   
   <!-- End Nav and Banner -->
   
   
+<div class="row">
+
+  <div class="large-12 columns">
+
+      <div>
+
+        <p><h4 class="subheader">Albany Dust Free Cleaning will give you a friendly and personable experience that you deserve.</h4></p>
+
+    </div>
+
+
+</div>
+
+  <div class="row">
+
+     <ul class="small-block-grid-2 large-block-grid-4">
+
+        <li class= "myImage"><%=image_tag("demo1.jpg")%></li>
+
+          <li class="th myImage"><%=image_tag("demo2.jpg")%></li>
+
+            <li class="th myImage"><%=image_tag("demo3.jpg")%></li>
+
+
+              <li class="th myImage"><%=image_tag("demo4.jpg")%></li>
+
+       
+
+
+     </ul>
+
+
+  </div>
+
   <!-- Main Content Section -->
   
-  <div class="row">
   
-    <div class="large-8 columns">
-      <h4>This is a content section.</h4>
-      <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-      <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-      
-    </div>
-    
-    <div class="large-4 columns">
-    
-      <!-- Gallery sidebar with a block grid. Note: block grid items should be the same size for optimal results -->
-      
-    <div class="panel">
-    	<h4><em>Excellence In Motion</em></h4>
-
-    	<p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-
-    </div>
-        
-  </div>
   
   
   <!-- Call to Action Panel -->
