--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -1,1 +1,12 @@
-<h1>Services Page</h1>
+<div class="row">
+	<div class="large-8 columns">
+
+     <h4 class="subheader">Services Page</h4>
+
+     <p></p>
+
+</div>
+
+
+
+</div>
