--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -1,12 +1,137 @@
 <div class="row">
-	<div class="large-8 columns">
+	<div class="large-8 columns static-space">
 
-     <h4 class="subheader">Services Page</h4>
+     <h4 class="subheader">Services</h4>
 
-     <p></p>
+
+
+           <div class="panel">
+          <h6 class="subheader">Basic Living Areas</h6>
+        
+          <a href="#" class="tiny button secondary livingDetails">Details</a>
+            
+           	   <ul class="bdetails lists">
+               <li>Floors</li>
+               <li>Windows</li>      
+               <li>Counter tops</li>
+               <li>Cupboards</li>
+               <li>Trash</li>
+               <li>Stove </li>  
+               </ul>  
+              
+          </div>
+
+            <div class="panel">
+          <h6 class="subheader">Kitchen</h6>
+       
+          <a href="#" class="tiny button secondary kitchenDetails">Details</a>
+             <p class="kdetails">testing hidden content!</p>
+
+               <ul class="kdetails lists">
+               <li>Floors</li>
+               <li>Windows</li>      
+               <li>Counter tops</li>
+               <li>Cupboards</li>
+               <li>Trash</li>
+               <li>Stove </li>  
+               </ul>  
+          </div>
+
+            <div class="panel">
+          <h6 class="subheader">Bedrooms</h6>
+          
+          <a href="#" class="tiny button secondary bedDetails">Details</a>
+          <p class="bedRoomDetails">testing hidden content!</p>
+
+             <ul class="bedRoomDetails lists">
+               <li>Floors</li>
+               <li>Windows</li>      
+               <li>Counter tops</li>
+               <li>Cupboards</li>
+               <li>Trash</li>
+               <li>Stove </li>  
+               </ul>  
+          </div>
+
+            <div class="panel">
+          <h6 class="subheader">Bathrooms</h6>
+        
+          <a href="#" class="tiny button secondary bathDetails">Details</a>
+            <p class="bathRoomDetails">testing hidden content!</p>
+
+
+             <ul class="bathRoomDetails lists">
+               <li>Floors</li>
+               <li>Windows</li>      
+               <li>Counter tops</li>
+               <li>Cupboards</li>
+               <li>Trash</li>
+               <li>Stove </li>  
+               </ul>  
+
+          </div>
+
+            <div class="panel">
+          <h6 class="subheader">Additional Duties</h6>
+        
+          <a href="#" class="tiny button secondary addDetails">Details</a>
+            <p class="adetails">testing hidden content!</p>
+
+
+             <ul class="adetails lists">
+               <li>Floors</li>
+               <li>Windows</li>      
+               <li>Counter tops</li>
+               <li>Cupboards</li>
+               <li>Trash</li>
+               <li>Stove </li>  
+               </ul>  
+          </div>
+
+
+            <div class="panel">
+          <h6 class="subheader">Moving</h6>
+        
+          <a href="#" class="tiny button secondary movingDetails">Details</a>
+            <p class="mdetails">testing hidden content!</p>
+
+
+            <ul class="mdetails lists">
+               <li>Floors</li>
+               <li>Windows</li>      
+               <li>Counter tops</li>
+               <li>Cupboards</li>
+               <li>Trash</li>
+               <li>Stove </li>  
+               </ul>  
+          </div>
+
+
+    
+        <ul>
+     <li>Floors</li>
+<li>Windows</li>      
+<li>Counter tops</li>
+<li>Cupboards</li>
+<li>Trash</li>
+<li>Stove       Inside     Outside
+Dust   
+Curtains     Shades
+Additional appliances   
+ Sinks   
+Sanitation of Toilet
+Sanitation of Shower
+Additional Duties etc,</p>
+
+</ul>
 
 </div>
 
+
+
+<div class="large-4 columns static-space">
+
+    </div>
 
 
 </div>
