--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -13,7 +13,9 @@
 
 
 
-  <div class="large-4 columns">
+  <div class="large-4 columns static-space">
+
+  	<%=image_tag "clean_1.jpg"%>
 
   </div>
 
