--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,19 @@
+
+
+.wordForm{
+   font-size: 18px;
+}
+.mySubmit{
+	text-align: right;
+}
+
+.myForms{
+
+	text-align: left;
+}
+
+
+
 .logo{
 	color: white;
 
