--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -108,22 +108,16 @@
 
 
     
-        <ul>
-     <li>Floors</li>
-<li>Windows</li>      
-<li>Counter tops</li>
-<li>Cupboards</li>
-<li>Trash</li>
-<li>Stove       Inside     Outside
+      
 Dust   
 Curtains     Shades
 Additional appliances   
  Sinks   
 Sanitation of Toilet
 Sanitation of Shower
-Additional Duties etc,</p>
+Additional Duties etc,
 
-</ul>
+
 
 </div>
 
