--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,2 +1,72 @@
-<h1>Contacts#new</h1>
-<p>Find me in app/views/contacts/new.html.erb</p>
+<div class="row">
+
+
+	<div class="large-8 columns static-space">
+
+
+<h4 class="subheader">Email &rarr;</h4>
+
+
+
+   <%=form_for(@contacts) do |f|%>
+
+   <div class="field">
+   
+   <%=f.label :name%>
+ 
+	<input name="contact[name]" type="text" placeholder="Enter Name"/>
+	</div>
+
+	 <div class="field">
+   
+   <%=f.label :email%>
+ 
+	<input name="contact[email]" type="text" placeholder="Enter Email"/>
+	</div>
+
+	 <div class="field">
+   
+  
+   <label>Message</label>
+ 
+
+
+	<textarea name="contact[body]" placeholder="Questions ot Concerns" ></textarea>
+
+       </div>
+
+       <div class="field">
+
+       	<%= f.button :submit, class: "formButton"%>
+
+
+       </div>
+
+	<%end%>
+
+</div><!--end-->
+
+
+	
+
+
+
+
+		<div class="large-4 columns static-space">
+
+		<h4 class="subheader" >Phone  &rarr;</h4>
+		<h5 class="subheader panel">Call us @ (518)944-4844, for any questions,concerns or a free estimate.</h5>
+
+
+	</div>
+
+
+
+
+
+
+
+
+
+</div>	
+
