--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -62,17 +62,18 @@
   
   <!-- Call to Action Panel -->
   <div class="row">
-    <div class="large-12 columns">
+    <div class="large-12 columns banner">
     
       <div class="panel">
-        <h4>Get a Quote</h4>
+        <h4>Get A Free Estimate</h4>
             
         <div class="row">
           <div class="large-9 columns">
-            <p>Check out are Service App!</p>
+           
           </div>
           <div class="large-3 columns">
-            <a href="#" class="radius button right">Get a Quote</a>
+            <%=link_to 'Contact Us', contacts_new_path, class: 'radius button right'%>
+          
           </div>
         </div>
       </div>
