--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   	<!-- Set the viewport width to device width for mobile -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+  	<title><%= content_for?(:title) ? yield(:title) : "Albany Dust Free Cleaning" %></title>
 
   	<%= stylesheet_link_tag    "application" %>
   	<%= javascript_include_tag "vendor/custom.modernizr" %>
@@ -35,7 +35,7 @@
            <ul class="right">
                 
 
-                  <li><a href="#">Quote</a></li>
+                  <li><a href="#">Rates</a></li>
                       <li><%= link_to 'Services', static_pages_services_path%></li>
                           <li><%= link_to 'Contact', contacts_new_path%></li>
 
@@ -61,7 +61,7 @@
         <div class="large-6 columns">
           <ul class="inline-list right">
             <li><%= link_to 'Privacy Policy', static_pages_privacy_path%></li>
-            <li><a href="#">Quotes</a></li>
+            <li><a href="#">Rates</a></li>
             <li><%= link_to 'Services', static_pages_services_path%></a></li>
           
             <li><%= link_to 'About Us', static_pages_about_path%></li>
