--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,8 @@
            <ul class="right">
                 
 
-                  <li><a href="#">Rates</a></li>
+               
+                   <li><%= link_to 'Rates', static_pages_rates_path%></li>
                       <li><%= link_to 'Services', static_pages_services_path%></li>
                           <li><%= link_to 'Contact', contacts_new_path%></li>
 
@@ -50,8 +51,9 @@
 
 
      <!-- Footer -->
-  
+  <div class="wide">
   <footer class="row">
+
     <div class="large-12 columns">
       <hr />
       <div class="row">
@@ -61,7 +63,7 @@
         <div class="large-6 columns">
           <ul class="inline-list right">
             <li><%= link_to 'Privacy Policy', static_pages_privacy_path%></li>
-            <li><a href="#">Rates</a></li>
+            <li><%= link_to 'Rates', static_pages_rates_path%></li>
             <li><%= link_to 'Services', static_pages_services_path%></a></li>
           
             <li><%= link_to 'About Us', static_pages_about_path%></li>
@@ -73,6 +75,7 @@
       </div>
     </div> 
   </footer>
+  </div>
 
     
     <%= javascript_include_tag "application" %>
