--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,15 +3,20 @@
 	<div class="large-12 columns banner">
  <ul data-orbit>
   <li>
-    <%=image_tag "test.jpg" %>
+    <%=image_tag "living_room_1000_400.jpg" %>
     <div class="orbit-caption">one</div>
   </li>
   <li>
-    <%=image_tag "test2.jpg" %>
+    <%=image_tag "bathroom_1000_400.jpg" %>
     <div class="orbit-caption">two</div>
   </li>
   <li>
-   <%=image_tag "test3.jpg" %>
+   <%=image_tag "dining_room_1000_400.jpg" %>
+    <div class="orbit-caption">three</div>
+  </li>
+
+  <li>
+   <%=image_tag "kitchen_1000_400.jpg" %>
     <div class="orbit-caption">three</div>
   </li>
 </ul>
