--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -24,13 +24,16 @@
   </div>
   
   <!-- End Nav and Banner -->
+
+
+
   
   
 <div class="row">
 
   <div class="large-12 columns">
 
-      <div>
+      
 
         <p><h4 class="subheader">Albany Dust Free Cleaning will give you a friendly and personable experience that you deserve.</h4></p>
 
@@ -39,26 +42,7 @@
 
 </div>
 
-  <div class="row">
-
-     <ul class="small-block-grid-2 large-block-grid-4">
-
-        <li class= "myImage"><%=image_tag("demo1.jpg")%></li>
-
-          <li class="th myImage"><%=image_tag("demo2.jpg")%></li>
-
-            <li class="th myImage"><%=image_tag("demo3.jpg")%></li>
-
-
-              <li class="th myImage"><%=image_tag("demo4.jpg")%></li>
-
-       
-
-
-     </ul>
-
-
-  </div>
+ 
 
   <!-- Main Content Section -->
   
@@ -80,8 +64,9 @@
             <%=link_to 'Contact Us', contacts_new_path, class: 'radius button right'%>
           
           </div>
-        </div>
-      </div>
+        </div><!-- end nested row -->
+
+      </div><!-- end panel -->
       
     </div>
   </div>
