services page done

--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -1,121 +1,273 @@
 <div class="row">
-	<div class="large-8 columns static-space">
+	<div class="large-12 columns static-space">
 
-     <h4 class="subheader">Services</h4>
+     <h3 class="subheader">Services</h3>
 
 
 
            <div class="panel">
-          <h6 class="subheader">Basic Living Areas</h6>
+          <h3 class="subheader">Basic Living Areas</h3>
         
           <a href="#" class="tiny button secondary livingDetails">Details</a>
+
+          
+
+         <!--Start nested row-->
+        <div class="row bdetails">
+
+          <div class="large-8 columns">
+
             
-           	   <ul class="bdetails lists">
-               <li>Floors</li>
-               <li>Windows</li>      
-               <li>Counter tops</li>
-               <li>Cupboards</li>
-               <li>Trash</li>
-               <li>Stove </li>  
-               </ul>  
+
+                 <p>Basic living area services include:</p>
+              
+             	   <ul class="lists">
+                 <li>Vacuuming</li>
+                 <li>Cleaning windows and window sills</li>      
+                 <li>Sweeping and mopping</li>
+                 <li>Cleaning mirrors</li>
+                
+                 </ul>  
+               
+
+               </div>
+
+                 <div class="large-4 columns">
+                   
+                    <%=image_tag 'living_small.jpg',class: 'th'%>
+
+                    </div>
+
+             </div> <!--end nested row-->
               
           </div>
 
             <div class="panel">
-          <h6 class="subheader">Kitchen</h6>
+          <h3 class="subheader">Kitchen</h3>
        
           <a href="#" class="tiny button secondary kitchenDetails">Details</a>
              <p class="kdetails">testing hidden content!</p>
 
-               <ul class="kdetails lists">
-               <li>Floors</li>
-               <li>Windows</li>      
-               <li>Counter tops</li>
-               <li>Cupboards</li>
-               <li>Trash</li>
-               <li>Stove </li>  
-               </ul>  
+               <!--Start nested row-->
+        <div class="row kdetails">
+
+          <div class="large-8 columns">
+
+            
+
+                 <p>Kitchen area services include:</p>
+              
+                 <ul class="lists">
+              
+                 <li>Wipe down/sanitize counters</li>
+                  <li>front and top of stove</li>
+                  <li>Wipe down cabinet fronts</li>
+                  <li>Microwave- clean inside and outside</li>
+                  <li>Sanitize sinks</li>
+                  <li>Clean front of dishwasher</li>
+                  <li>Perform light dusting</li>
+                  <li>Trash removal</li>
+                  <li>Sweep/Mop</li>
+                  <li>Vacuum(if needed)</li>
+                  <li>Clean mirrors</li>
+                
+                 </ul>  
+               
+
+               </div>
+
+                 <div class="large-4 columns">
+                   
+                    <%=image_tag 'kitchen_small.jpg',class: 'th'%>
+
+                    </div>
+
+             </div> <!--end nested row-->
+
+             
           </div>
 
             <div class="panel">
-          <h6 class="subheader">Bedrooms</h6>
+          <h3 class="subheader">Bedrooms</h3>
           
           <a href="#" class="tiny button secondary bedDetails">Details</a>
-          <p class="bedRoomDetails">testing hidden content!</p>
+         
 
-             <ul class="bedRoomDetails lists">
-               <li>Floors</li>
-               <li>Windows</li>      
-               <li>Counter tops</li>
-               <li>Cupboards</li>
-               <li>Trash</li>
-               <li>Stove </li>  
-               </ul>  
+
+          <!--Start nested row-->
+        <div class="row bedRoomDetails">
+
+          <div class="large-8 columns">
+
+            
+
+                 <p>Bedrooms services include:</p>
+              
+                 <ul class="lists">
+                
+                   <li>Make bed</li>
+                   <li>clean mirrors</li>
+                   <li>vacuum</li>
+                   <li>sweep/mop</li>
+                   <li>clean windows &#38; window sills</li>
+                   <li>perform light dusting</li>
+                   <li>trash removal</li>
+                
+                 </ul>  
+               
+
+               </div>
+
+                 <div class="large-4 columns">
+                   
+                    <%=image_tag 'bed_small.jpg',class: 'th'%>
+
+                    </div>
+
+             </div> <!--end nested row-->
+
+            
           </div>
 
             <div class="panel">
-          <h6 class="subheader">Bathrooms</h6>
+          <h3 class="subheader">Bathrooms</h3>
         
           <a href="#" class="tiny button secondary bathDetails">Details</a>
-            <p class="bathRoomDetails">testing hidden content!</p>
+            
 
 
-             <ul class="bathRoomDetails lists">
-               <li>Floors</li>
-               <li>Windows</li>      
-               <li>Counter tops</li>
-               <li>Cupboards</li>
-               <li>Trash</li>
-               <li>Stove </li>  
-               </ul>  
+               <!--Start nested row-->
+        <div class="row bathRoomDetails">
+
+          <div class="large-8 columns">
+
+            
+
+                 <p>Bathrooms services include:</p>
+              
+                 <ul class="lists">
+                 <li>Vacuuming</li>
+                 <li>Cleaning windows and window sills</li>      
+                 <li>Sweeping and mopping</li>
+                 <li>Cleaning mirrors</li>
+
+
+                 <li>Sanitize toilet</li>
+                 <li>Sanitize shower/tub</li>
+                 <li>Sanitize sinks</li>
+                 <li>perform light dusting</li>
+                 <li>sweep/mop</li>
+                 <li>trash removal</li>
+                 <li>clean windows &#38; window sills</li>
+                 <li>clean mirrors</li>
+                
+                 </ul>  
+               
+
+               </div>
+
+                 <div class="large-4 columns">
+                   
+                    <%=image_tag 'bath_small.jpg',class: 'th'%>
+
+                    </div>
+
+             </div> <!--end nested row-->
+
+
+           
 
           </div>
 
             <div class="panel">
-          <h6 class="subheader">Additional Duties</h6>
+          <h3 class="subheader">Additional Duties</h3>
         
           <a href="#" class="tiny button secondary addDetails">Details</a>
-            <p class="adetails">testing hidden content!</p>
+           
+
+                <!--Start nested row-->
+        <div class="row adetails ">
+
+          <div class="large-8 columns">
+
+            
+
+                 <p> Additional duties services include:</p>
+              
+                 <ul class="lists">
+                 <li>Vacuuming</li>
+                 <li>Cleaning windows and window sills</li>      
+                 <li>Sweeping and mopping</li>
+                 <li>Cleaning mirrors</li>
+
+                  <li>Sanitize trash cans</li>
+                  <li>Drapes- wash/iron</li>
+                  <li>Blinds- light dusting</li>
+                  <li>Loading Dishwasher</li>
+                  <li>Cleaning inside refrigerator</li>
+                  <li>Cleaning/organizing inside cupboards</li>
+                  <li>Detailing doorknobs &#38; handles</li>
+                
+                 </ul>  
+               
+
+               </div>
+
+                 <div class="large-4 columns">
+                   
+                    <%=image_tag 'moving_small.jpg',class: 'th'%>
+
+                    </div>
+
+             </div> <!--end nested row-->
 
 
-             <ul class="adetails lists">
-               <li>Floors</li>
-               <li>Windows</li>      
-               <li>Counter tops</li>
-               <li>Cupboards</li>
-               <li>Trash</li>
-               <li>Stove </li>  
-               </ul>  
+            
           </div>
 
 
             <div class="panel">
-          <h6 class="subheader">Moving</h6>
+          <h3 class="subheader">Moving</h3>
         
           <a href="#" class="tiny button secondary movingDetails">Details</a>
-            <p class="mdetails">testing hidden content!</p>
+           
+
+              <!--Start nested row-->
+        <div class="row mdetails ">
+
+          <div class="large-8 columns">
+
+            
+
+                 <p>Moving services include:</p>
+              
+                 <ul class="lists">
+                 <li>Vacuuming</li>
+                 <li>Cleaning windows and window sills</li>      
+                 <li>Sweeping and mopping</li>
+                 <li>Cleaning mirrors</li>
+                
+                 </ul>  
+               
+
+               </div>
+
+                 <div class="large-4 columns">
+                   
+                    <%=image_tag 'moving_small.jpg',class: 'th'%>
+
+                    </div>
+
+             </div> <!--end nested row-->
 
 
-            <ul class="mdetails lists">
-               <li>Floors</li>
-               <li>Windows</li>      
-               <li>Counter tops</li>
-               <li>Cupboards</li>
-               <li>Trash</li>
-               <li>Stove </li>  
-               </ul>  
+         
           </div>
 
 
     
       
-Dust   
-Curtains     Shades
-Additional appliances   
- Sinks   
-Sanitation of Toilet
-Sanitation of Shower
-Additional Duties etc,
+
 
 
 
@@ -123,9 +275,7 @@ Additional Duties etc,
 
 
 
-<div class="large-4 columns static-space">
 
-    </div>
 
 
 </div>
