--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -13,14 +13,15 @@ html,body{
 .content{
 
 	padding: 10px;
-	padding-bottom: 80px;
+	padding-bottom: 100px;
+	margin-bottom: 50px;
 }
 
 
 .wide{
 	width: 100%;
 	position: absolute;
-	height: 80px;
+	height: 100px;
 	background-color: #efefef;
 	bottom: 0;
 	left: 0;
@@ -65,6 +66,7 @@ html,body{
 .static-space{
 
 	margin-top: 100px;
+	margin-bottom: 100px;
 
 }
 
