--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,9 +5,9 @@
 <h4 class="subheader">About us</h4>
 
 
- <p>	Our Goal is to give your home a clean and healthy environment. With our professional and hard workers you will have the satisfaction of enjoying and relaxing in your home. Albany Dust Free Cleaning will give you a friendly and personable experience that you deserve. We will meet every person and go over details of the job description to maintain the quality that you are looking for.</p>
+ <p>	Our Goal is to give your home a clean and healthy environment. With our professional workers you will have the satisfaction of enjoying and relaxing in your home. Albany Dust Free Cleaning will give you a friendly and personable experience that you deserve. We will meet every person and go over details of the job description to maintain the quality that you are looking for.</p>
 
-<p>	Albany Dust Free Cleaning is Centrally located in the Capital Region. We provide light housekeeping as well additional duties that are required. We work for Residential homes as well as offices. Our services will branch out within a 30 mile radius from the Albany County area.</p>
+<p>	Albany Dust Free Cleaning is Centrally located in the Capital Region. We provide light housekeeping as well as additional services, available upon request. We service Residential homes as well as commercial properties. Our services will branch out within a 30 mile radius from the Albany County area.</p>
   </div>
 
 
