--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -13,7 +13,8 @@ html,body{
 .content{
 
 	padding: 10px;
-	padding-bottom: 100px;
+	padding-bottom: 215px;
+
 	
 }
 
@@ -21,10 +22,11 @@ html,body{
 .wide{
 	width: 100%;
 	position: absolute;
-	height: 100px;
-	background-color: #efefef;
+	height: 215px;
+	background-color: #B0B2B5;
 	bottom: 0;
 	left: 0;
+
 	
 	
 }
@@ -51,6 +53,8 @@ html,body{
 .banner{
 
 	margin-top: 20px;
+	margin-bottom: 20px;
+	
 }
 
 .name{
@@ -95,4 +99,35 @@ html,body{
 .lists{
 
 	list-style-type: none;
+}
+
+
+.content-footer{
+	color: white;
+}
+
+.low-nav li a{
+
+color: white;
+
+
+}
+
+
+.low-nav li a:hover{
+
+color: #000;
+
+
+}
+
+
+
+@media only screen and (max-width: 786px){
+
+	body{
+		color: pink;
+
+	}
+
 }
