--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -126,11 +126,11 @@ $default-float: left;
 // Media Queries
 
  $small-screen: 768px;
- $medium-screen: 1280px;
- $large-screen: 1440px;
+ //$medium-screen: 1280px;
+ //$large-screen: 1440px;
 
 // $screen: "only screen";
-// $small: "only screen and (min-width: #{$small-screen})";
+ $small: "only screen and (min-width: #{$small-screen})";
 // $medium: "only screen and (min-width: #{$medium-screen})";
 // $large: "only screen and (min-width: #{$large-screen})";
 // $landscape: "only screen and (orientation: landscape)";
