--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -55,7 +55,11 @@
 		<div class="large-6 columns static-space">
 
 		<h4 class="subheader" >Phone  &rarr;</h4>
-		<h5 class="subheader panel">Call  us @(518)944-4804, or Email customerservice@albanydfcleaning.com for any questions,concerns or a free consult.</h5>
+		<h5 class="subheader panel">
+			<p>Call us @(518)944-4804.</p>
+			
+			<p>Please contact us for any questions,concerns or a free consult.</p>
+		</h5>
 
 
 	</div>
