--- a/app/views/static_pages/rates.html.erb
+++ b/app/views/static_pages/rates.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 
-	<div class="large-8 columns static-space">
+	<div class="large-12 columns static-space">
 <h4 class="subheader">Rates</h4>
 
 
@@ -16,11 +16,72 @@
 
 
 
-  <div class="large-4 columns static-space">
+  
 
-  	<%=image_tag "dust.jpg"%>
 
-  </div>
+
+</div>
+
+
+
+
+<div class="row">
+
+	<div class="large-12 columns static-space">
+
+		 <div class="row">
+
+		 	 <div class="large-4 columns">
+
+         <ul class="pricing-table">
+
+            <li class="title">Standard 2 Hours</li>
+                <li class="price">70.00</li>
+                 <li class="bullet-item">additional hour- $50.00</li>
+                 <li class="description">With Agreement</li>                   
+
+         </ul>
+
+           </div>
+
+
+
+              	 <div class="large-4 columns">
+
+         <ul class="pricing-table">
+
+            <li class="title">Standard 2 Hours</li>
+                <li class="price">70.00</li>
+                 <li class="bullet-item">additional hour- $50.00</li>
+                 <li class="description">With Agreement</li>                   
+
+         </ul>
+
+           </div>
+
+
+            	 <div class="large-4 columns">
+
+         <ul class="pricing-table">
+
+            <li class="title">Standard 2 Hours</li>
+                <li class="price">70.00</li>
+                 <li class="bullet-item">additional hour- $50.00</li>
+                 <li class="description">With Agreement</li>                   
+
+         </ul>
+
+           </div>
+         </div>
+
+
+
+
+
+
+	</div>
+
+
 
 
 </div>
