--- a/app/views/rates/edit.html.erb
+++ b/app/views/rates/edit.html.erb
@@ -1,2 +1,45 @@
-<h1>Rates#edit</h1>
-<p>Find me in app/views/rates/edit.html.erb</p>
+<div class="row">
+
+
+	<div class="large-6 columns static-space">
+
+
+<h4 class="subheader">Edit Your Rates</h4>
+
+
+
+  <%=render 'form'%>
+
+       </div>
+
+	<%end%>
+
+</div><!--end-->
+
+
+	
+
+
+
+
+		<div class="large-6 columns static-space">
+
+		<h4 class="subheader" >Phone  &rarr;</h4>
+		<h5 class="subheader panel">
+			<p>Call us @(518)944-4804.</p>
+			
+			<p>Please contact us for any questions,concerns or a free consult.</p>
+		</h5>
+
+
+	</div>
+
+
+
+
+
+
+
+
+
+</div>	
