--- a/app/views/static_pages/rates.html.erb
+++ b/app/views/static_pages/rates.html.erb
@@ -27,52 +27,36 @@
 
 <div class="row">
 
-	<div class="large-12 columns static-space">
+	<div class="large-12 columns">
+
+		<!--begin nested row-->
 
 		 <div class="row">
+
+		 	<%@rates.each do |rate|%>
 
 		 	 <div class="large-4 columns">
 
          <ul class="pricing-table">
 
-            <li class="title">Standard 2 Hours</li>
-                <li class="price">70.00</li>
-                 <li class="bullet-item">additional hour- $50.00</li>
-                 <li class="description">With Agreement</li>                   
+            <li class="title"><%=rate.title%></li>
+                <li class="price"><%=rate.price%></li>
+                 <li class="bullet-item"><%=rate.hour%></li>
+                 <li class="description"><%=rate.desp%></li>                   
 
          </ul>
 
            </div>
 
+           <%end%>
 
 
-              	 <div class="large-4 columns">
 
-         <ul class="pricing-table">
-
-            <li class="title">Standard 2 Hours</li>
-                <li class="price">70.00</li>
-                 <li class="bullet-item">additional hour- $50.00</li>
-                 <li class="description">With Agreement</li>                   
-
-         </ul>
-
-           </div>
+              	
 
 
-            	 <div class="large-4 columns">
-
-         <ul class="pricing-table">
-
-            <li class="title">Standard 2 Hours</li>
-                <li class="price">70.00</li>
-                 <li class="bullet-item">additional hour- $50.00</li>
-                 <li class="description">With Agreement</li>                   
-
-         </ul>
-
-           </div>
-         </div>
+            
+         </div><!--end nested row-->
 
 
 
