--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -37,7 +37,7 @@
 
        <div class="field">
 
-       	<%= f.button :submit, class: "formButton"%>
+       	<%= f.button :Submit, class: "contact-button"%>
 
 
        </div>
@@ -55,7 +55,7 @@
 		<div class="large-6 columns static-space">
 
 		<h4 class="subheader" >Phone  &rarr;</h4>
-		<h5 class="subheader panel">
+		<h5 class="subheader subPanel">
 			<p>Call us @(518)944-4804.</p>
 			
 			<p>Please contact us for any questions,concerns or a free consult.</p>
