--- a/app/views/static_pages/rates.html.erb
+++ b/app/views/static_pages/rates.html.erb
@@ -1,17 +1,27 @@
-<div class="row">
 
-	<div class="large-12 columns static-space">
-<h4 class="subheader">Rates</h4>
-
-
- <div class="panel">
-
-   <h5>Base Rate: &#36;45.00 per hour.</h5>
+<div class="subPanel wide-panel">
+  <div class="row">
+    <div class="large-12 columns">
+   <h2 class="white-headers">Service Rates</h2>
+   </div>
+   </div>
 
 
 
  </div>
+
+
+
+<div class="row">
+
+	<div class="large-12 columns static-space">
+
+
+
+ 
   </div>
+
+
 
 
 
@@ -27,7 +37,7 @@
 
 <div class="row">
 
-	<div class="large-12 columns">
+	<div class="large-12 columns static-space">
 
 		<!--begin nested row-->
 
@@ -40,8 +50,8 @@
          <ul class="pricing-table">
 
             <li class="title"><%=rate.title%></li>
-                <li class="price"><%=rate.price%></li>
-                 <li class="bullet-item"><%=rate.hour%></li>
+                <li class="price"><%=number_to_currency(rate.price)%></li>
+                 <li class="bullet-item"><%=number_to_currency(rate.hour)%></li>
                  <li class="description"><%=rate.desp%></li>                   
 
          </ul>
