--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -1,7 +1,21 @@
+  <div class="subPanel wide-panel">
+<div class="row">
+    <div class="large-12 columns">
+  <h2>Services</h2>
+</div>
+  </div>
+  </div>
+
+<div class="row">
+  <div class="large-12 columns static-space">
+  </div>
+  
+
+
 <div class="row">
 	<div class="large-12 columns static-space">
 
-     <h3 class="subheader">Services</h3>
+   
 
 
 
