--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -122,6 +122,23 @@ color: #000;
 }
 
 
+.wide-panel{
+	width: 100%;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin-top: 100px;
+	
+	height: 100px;
+	background: lightblue;
+}
+
+.white-headers{
+
+	color: white;
+}
+
+
 @media screen and (max-width: 500px){
 
 	.wide{
