--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -117,7 +117,7 @@ $default-float: left;
 // $include-html-nav-classes: $include-html-classes;
 // $include-html-top-bar-classes: $include-html-classes;
 // $include-html-label-classes: $include-html-classes;
-// $include-html-panel-classes: $include-html-classes;
+ //$include-html-panel-classes: $include-html-classes;
 // $include-html-pricing-classes: $include-html-classes;
 // $include-html-progress-classes: $include-html-classes;
 // $include-html-magellan-classes: $include-html-classes;
@@ -912,7 +912,7 @@ $default-float: left;
 
 // We use these to set default font colors
 
-// $panel-font-color: #333;
+ //  $panel-font-color: #fff;
 // $panel-font-color-alt: #fff;
 
 // $panel-header-adjust: true;
