--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -53,7 +53,7 @@
   <div class="row">
     <div class="large-12 columns banner">
     
-      <div class="panel">
+      <div class="subPanel">
         <h4>Get A Free Consult</h4>
             
         <div class="row">
@@ -63,7 +63,7 @@
            
           </div>
           <div class="large-3 columns">
-            <%=link_to 'Contact Us', contacts_new_path, class: 'radius button right'%>
+            <%=link_to 'Contact Us', contacts_new_path, class: 'home-button right'%>
           
           </div>
         </div><!-- end nested row -->
