--- a/app/views/rates/base.html.erb
+++ b/app/views/rates/base.html.erb
@@ -23,6 +23,7 @@
 <td><%=rate.price%></td>
 <td><%=rate.hour%></td>
 <td><%=rate.desp%></td>
+<td><%=link_to 'Edit', edit_rate_path(rate)%></td>
    </tr>
 
   <%end%>
