--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,13 +82,13 @@
           <ul class="inline-list right low-nav">
 
 
-               <li><%= link_to 'Home', static_pages_url%></li>
-            <li><%= link_to 'Rates', static_pages_rates_path%></li>
-            <li><%= link_to 'Services', static_pages_services_path%></a></li>
+              <li><%= link_to 'HOME', static_pages_url%></li>
+            <li><%= link_to 'RATES', static_pages_rates_path%></li>
+            <li><%= link_to 'SERVICES', static_pages_services_path%></a></li>
           
-            <li><%= link_to 'About Us', static_pages_about_path%></li>
+            <li><%= link_to 'ABOUT US', static_pages_about_path%></li>
 
-              <li><%= link_to 'Contact', contacts_new_path%></li>
+              <li><%= link_to 'CONTACT', contacts_new_path%></li>
           
           </ul>
         </div>
