--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,16 +8,16 @@
   </li>
   <li>
     <%=image_tag "bathroom_1000_400.jpg" %>
-    <div class="orbit-caption">Spotless sanitized bathrooms</div>
+    <div class="orbit-caption">Spotless Sanitized Bathrooms</div>
   </li>
   <li>
    <%=image_tag "dining_room_1000_400.jpg" %>
-    <div class="orbit-caption">Clean Dining Areas Ready for The Holidays</div>
+    <div class="orbit-caption">Clean Dining Areas Ready For The Holidays</div>
   </li>
 
   <li>
    <%=image_tag "kitchen_1000_400.jpg" %>
-    <div class="orbit-caption">Clean Kitchens Ready For Food Preperation</div>
+    <div class="orbit-caption">Clean Kitchens Ready For Food Preparation</div>
   </li>
 </ul>
     </div>
