--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -104,6 +104,7 @@ html,body{
 
 .content-footer{
 	color: white;
+	font-size: .9em;
 }
 
 .low-nav li a{
@@ -128,7 +129,7 @@ color: #000;
 	left: 0;
 	right: 0;
 	margin-top: 100px;
-	
+
 	height: 100px;
 	background: lightblue;
 }
