--- a/app/views/static_pages/rates.html.erb
+++ b/app/views/static_pages/rates.html.erb
@@ -2,7 +2,8 @@
 <div class="subPanel wide-panel">
   <div class="row">
     <div class="large-12 columns">
-   <h2 class="white-headers">Service Rates</h2>
+   <h2 class="white-headers">Service Rates</h2
+    >
    </div>
    </div>
 
